[gd_scene load_steps=4 format=3 uid="uid://bvx4bb7jk0sr7"]

[ext_resource type="Script" path="res://game/world/item/world_item.gd" id="1_py7qy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyjr6"]
size = Vector2(18, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_hafnq"]
radius = 50.0

[node name="World Item" type="Area2D"]
collision_mask = 2
script = ExtResource("1_py7qy")
item_gravity = 500.0
bounce = 50.0
x_damping = 2.0
y_damping = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uyjr6")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
shape = SubResource("RectangleShape2D_uyjr6")
target_position = Vector2(0, 2)
max_results = 3

[node name="Pickup Cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Pickup Delay" type="Timer" parent="."]
one_shot = true

[node name="Magnet Range" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Magnet Range"]
shape = SubResource("CircleShape2D_hafnq")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Pickup Cooldown" to="." method="_on_pickup_cooldown_timeout"]
[connection signal="timeout" from="Pickup Delay" to="." method="_on_pickup_delay_timeout"]
[connection signal="body_entered" from="Magnet Range" to="." method="_on_magnet_range_body_entered"]
